--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="KLib">
+      <HintPath>..\..\..\klib\Framework\KLib.dll</HintPath>
+    </Reference>
+    <Reference Include="KLib.Controls">
+      <HintPath>..\..\..\klib\Framework\KLib.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="KLib.Net">
       <HintPath>..\..\..\KLib\Framework\KLib.Net.dll</HintPath>
     </Reference>
@@ -97,10 +103,20 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="HTSNetwork.cs" />
+    <Compile Include="Pages\SubjectPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\SubjectPage.Designer.cs">
+      <DependentUpon>SubjectPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pages\SubjectPage.resx">
+      <DependentUpon>SubjectPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -132,5 +148,6 @@
   <ItemGroup>
     <None Include="Images\subject-24.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
