implemented scene change

--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -148,6 +148,8 @@
   <ItemGroup>
     <None Include="Images\subject-24.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Images\Turandot Black 24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
