--- a/HTS Controller/packages.config
+++ b/HTS Controller/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Serilog" version="4.2.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="6.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Debug" version="3.0.0" targetFramework="net472" />
