--- a/Controls/Controls.csproj
+++ b/Controls/Controls.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ChannelView.designer.cs">
       <DependentUpon>ChannelView.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrawingControl.cs" />
     <Compile Include="GateView.cs">
       <SubType>UserControl</SubType>
     </Compile>
