--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Pages\SubjectPage.Designer.cs">
       <DependentUpon>SubjectPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="ParamSliderProperties.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyControl.cs">
