--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -117,19 +117,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChannelControl.cs">
+    <Compile Include="Interactive\ChannelControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ChannelControl.Designer.cs">
+    <Compile Include="Interactive\ChannelControl.Designer.cs">
       <DependentUpon>ChannelControl.cs</DependentUpon>
     </Compile>
     <Compile Include="FileLocations.cs" />
     <Compile Include="HSTControllerSettings.cs" />
-    <Compile Include="InteractiveForm.cs">
+    <Compile Include="Interactive\InteractiveForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InteractiveForm.Designer.cs">
+    <Compile Include="Interactive\InteractiveForm.Designer.cs">
       <DependentUpon>InteractiveForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interactive\SliderConfig.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Interactive\SliderConfig.Designer.cs">
+      <DependentUpon>SliderConfig.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -138,10 +144,10 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="HTSNetwork.cs" />
-    <Compile Include="InteractiveControlGridView.cs">
+    <Compile Include="Interactive\InteractiveControlGridView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="InteractiveControlGridView.designer.cs">
+    <Compile Include="Interactive\InteractiveControlGridView.designer.cs">
       <DependentUpon>InteractiveControlGridView.cs</DependentUpon>
     </Compile>
     <Compile Include="Pages\TurandotPage.cs">
@@ -156,25 +162,27 @@
     <Compile Include="Pages\SubjectPage.Designer.cs">
       <DependentUpon>SubjectPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="ParamSliderProperties.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyControl.cs">
+    <Compile Include="Interactive\PropertyControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="PropertyControl.Designer.cs">
+    <Compile Include="Interactive\PropertyControl.Designer.cs">
       <DependentUpon>PropertyControl.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ChannelControl.resx">
+    <EmbeddedResource Include="Interactive\ChannelControl.resx">
       <DependentUpon>ChannelControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InteractiveForm.resx">
+    <EmbeddedResource Include="Interactive\InteractiveForm.resx">
       <DependentUpon>InteractiveForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interactive\SliderConfig.resx">
+      <DependentUpon>SliderConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InteractiveControlGridView.resx">
+    <EmbeddedResource Include="Interactive\InteractiveControlGridView.resx">
       <DependentUpon>InteractiveControlGridView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\TurandotPage.resx">
@@ -193,7 +201,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="PropertyControl.resx">
+    <EmbeddedResource Include="Interactive\PropertyControl.resx">
       <DependentUpon>PropertyControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
