--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -244,9 +244,6 @@
     <EmbeddedResource Include="TurandotLiveForm.resx">
       <DependentUpon>TurandotLiveForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="CHANGELOG.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -275,6 +272,9 @@
       <Project>{65b6e422-f6c9-4fae-bbd1-58c67a83a2ae}</Project>
       <Name>Controls</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Tools-24.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
