--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -58,8 +58,8 @@
       <HintPath>..\..\c462-diagnostics\Diagnostics\Library\ScriptAssemblies\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Interop.SREYELINKLib">
-      <HintPath>..\..\..\3rd Party\EyeLink\libs\Interop.SREYELINKLib.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\Unity Assemblies\Interop.SREYELINKLib.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="KLib">
       <HintPath>..\..\..\klib\Framework\KLib.dll</HintPath>
