- additional logging - watchdogs to prevent measurements from hanging if tablet does not respond to abort request

--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -249,6 +249,7 @@
     <Compile Include="TurandotLiveForm.Designer.cs">
       <DependentUpon>TurandotLiveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Watchdog.cs" />
     <EmbeddedResource Include="BasicMeasurementForm.resx">
       <DependentUpon>BasicMeasurementForm.cs</DependentUpon>
     </EmbeddedResource>
