--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -57,6 +57,7 @@
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\c462-diagnostics\Diagnostics\Library\ScriptAssemblies\Assembly-CSharp.dll</HintPath>
+      <Aliases>global</Aliases>
     </Reference>
     <Reference Include="Interop.SREYELINKLib">
       <HintPath>..\Unity Assemblies\Interop.SREYELINKLib.dll</HintPath>
@@ -115,6 +116,7 @@
       <HintPath>..\packages\System.Collections.Immutable.8.0.0\lib\net462\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.8.0.1\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
@@ -178,6 +180,32 @@
       <DependentUpon>DataStreamIndicator.cs</DependentUpon>
     </Compile>
     <Compile Include="Events.cs" />
+    <Compile Include="HTS\Serialization\Basic\Audiograms\AudiogramMeasurementSettings.cs" />
+    <Compile Include="HTS\Serialization\Basic\BasicMeasurementConfiguration.cs" />
+    <Compile Include="HTS\Serialization\Basic\Bekesy\BekesyMeasurementSettings.cs" />
+    <Compile Include="HTS\Serialization\Basic\LDL\LDL.HapticStimulus.cs" />
+    <Compile Include="HTS\Serialization\Basic\LDL\LDLMeasurementSettings.cs" />
+    <Compile Include="HTS\Serialization\Basic\Questionnaires\Questionnaires.Question.cs" />
+    <Compile Include="HTS\Serialization\Basic\Questionnaires\Questionnaires.Questionnaire.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Channel.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Enumerations.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Gate.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Level.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Modulations\AM.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Modulations\AMFactory.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Modulations\SinusoidalAM.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\SignalManager.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\AMConverter.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\ChannelConverter.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\GateConverter.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\LevelUnitsConverters.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\SortableExpandableObjectConverter.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\SortableTypeConverter.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\TypeConverters\WaveformConverter.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Waveforms\Noise.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Waveforms\Sinusoid.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Waveforms\Waveform.cs" />
+    <Compile Include="HTS\Serialization\KLib\Signals\Waveforms\WaveformFactory.cs" />
     <Compile Include="Interactive\ChannelControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -340,6 +368,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Revision_History.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HTS\Serialization\KLib\TypeConverters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
