added file sync/app update

--- a/HTS Controller/HTSController.csproj
+++ b/HTS Controller/HTSController.csproj
@@ -208,6 +208,12 @@
     </Compile>
     <Compile Include="HTSNetwork.cs" />
     <Compile Include="MATLAB.cs" />
+    <Compile Include="Pages\FileSyncControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\FileSyncControl.Designer.cs">
+      <DependentUpon>FileSyncControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ProtocolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -270,6 +276,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pages\FileSyncControl.resx">
+      <DependentUpon>FileSyncControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\ProtocolControl.resx">
       <DependentUpon>ProtocolControl.cs</DependentUpon>
