--- a/HTS Controller/packages.config
+++ b/HTS Controller/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="KLib" version="1.2.0" targetFramework="net48" />
+  <package id="Markdig" version="0.44.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.3650.58" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="protobuf-net" version="3.2.30" targetFramework="net48" />
   <package id="protobuf-net.Core" version="3.2.46" targetFramework="net472" />
@@ -10,16 +12,16 @@
   <package id="Serilog.Sinks.Debug" version="3.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="6.0.0" targetFramework="net472" />
   <package id="SerilogTraceListener" version="3.2.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
   <package id="System.CodeDom" version="9.0.5" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
   <package id="System.Data.DataSetExtensions" version="4.5.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
   <package id="System.Management" version="9.0.5" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
   <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="ZedGraph" version="1.0.0" targetFramework="net48" />
